--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Minimal Django + Create React App template"
 authors = ["kevinshen56714 <kshen64@gatech.edu>"]
 license = "MIT"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -12,6 +13,7 @@ djangorestframework = "^3.13.1"
 django-cors-headers = "^3.12.0"
 psycopg2 = "^2.9.3"
 python-decouple = "^3.6"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
